--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "background_color": "#ffffff",
   "theme_color": "#db4938",
   "scripts": {
-    "build": "npm run minify",
+    "build": "tsc",
+    "start": "npm run build && serve .",
     "minify": "jsmin -o name.min.js name.js"
   },
   "icons": [
