--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   },
   "icons": [
     {
-      "src": "images/pwa-icon-128x128.png",
+      "src": "images/icons/pwa-icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "images/pwa-icon-144x144.png",
+      "src": "images/icons/pwa-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "images/pwa-icon-192x192.png",
+      "src": "images/icons/pwa-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/pwa-icon-256x256.png",
+      "src": "images/icons/pwa-icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "images/pwa-icon-512x512.png",
+      "src": "images/icons/pwa-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -42,6 +42,7 @@
     "@types/serviceworker": "^0.0.128"
   },
   "dependencies": {
+    "firebase": "^11.6.1",
     "jsmin": "^1.0.1"
   }
 }
