feat: using webpack

--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
     }
   ],
   "devDependencies": {
-    "@types/serviceworker": "^0.0.128"
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
+    "@babel/register": "^7.25.9",
+    "@types/serviceworker": "^0.0.128",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "firebase": "^11.6.1",
