--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "outDir": ".",
+    "module": "es6",
+    "target": "es5",
+    "outDir": "./dist/",
+    "noImplicitAny": true,
     "strict": true,
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "removeComments": true,
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
   "include": ["**/*.ts"],
