--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "background_color": "#ffffff",
   "theme_color": "#db4938",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack",
     "start": "npm run build && serve .",
     "minify": "jsmin -o name.min.js name.js"
   },
@@ -39,16 +39,12 @@
     }
   ],
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.27.0",
-    "@babel/register": "^7.25.9",
     "@types/serviceworker": "^0.0.128",
-    "ts-loader": "^9.5.2",
-    "typescript": "^5.8.3",
+    "firebase": "^11.6.1",
+    "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "firebase": "^11.6.1",
     "jsmin": "^1.0.1"
   }
 }
