--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
 
       - name: build project
-        run: npx webpack -c ./webpack.config.ts
+        run: npm run build
 
       - name: deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
